syntax = "proto3";

option go_package = "github.com/jhump/protoreflect/desc/desc_test;desc_test";

package desc_test;

import "desc_test1.proto";
import "pkg/desc_test_pkg.proto";

enum Proto3Enum {
	UNKNOWN = 0;
	VALUE1 = 1;
	VALUE2 = 2;
}

message TestRequest {
	repeated Proto3Enum foo = 1;
	string bar = 2;
	TestMessage baz = 3;
	TestMessage.NestedMessage.AnotherNestedMessage snafu = 4;
}

message TestResponse {
	AnotherTestMessage atm = 1;
}

service TestService {
	rpc DoSomething (TestRequest) returns (jhump.protoreflect.desc.Bar);
	rpc DoSomethingElse (stream TestMessage) returns (TestResponse);
	rpc DoSomethingAgain (jhump.protoreflect.desc.Bar) returns (stream AnotherTestMessage);
	rpc DoSomethingForever (stream TestRequest) returns (stream TestResponse);
}
